unpackaged/main/default/objects/Test_Cycle__c/Test_Cycle__c.object-meta.xml
<CustomObject>
    <description>One sprint&#39;s test pass (e.g. &quot;Sprint 42 Regression&quot;). Scope = union of every attached book&#39;s cases plus directly-added cases, de-duplicated. Team changes propagate only to UNCLAIMED executions.</description>
    <label>Test Cycle</label>
    <nameField>
        <label>Test Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Cycles</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>