unpackaged/main/default/objects/Test_Cycle__c/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team whose members see this cycle&#39;s unclaimed executions. Nullable — a cycle can be unassigned.</description>
    <label>Assigned Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Test Cycles</relationshipLabel>
    <relationshipName>Test_Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>