unpackaged/main/default/objects/Test_Cycle__c/fields/Claim_Limit_Per_Tester__c.field-meta.xml
<CustomField>
    <fullName>Claim_Limit_Per_Tester__c</fullName>
    <description>How many incomplete claims one tester may hold in this cycle at once (blank = unlimited). Completing or releasing a run frees headroom — the cap throttles pool-draining, not throughput.</description>
    <label>Claim Limit Per Tester</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>