unpackaged/main/default/objects/Test_Cycle__c/fields/Max_Testers__c.field-meta.xml
<CustomField>
    <fullName>Max_Testers__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Default number of testers who may claim each case in this cycle (seats). A case-level override (Test_Case__c.Max_Testers_Override__c) wins when set. Enforced inside the claim transaction, not by this field alone.</description>
    <label>Max Testers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>