unpackaged/main/default/objects/Test_Cycle__c/fields/Stale_Claim_Days__c.field-meta.xml
<CustomField>
    <fullName>Stale_Claim_Days__c</fullName>
    <defaultValue>7</defaultValue>
    <description>Days a claim may sit at Not Started before the nightly job returns it to the pool (blank = never auto-release). Cycles created before this field existed have it blank and are unaffected until an admin opts in.</description>
    <label>Stale Claim Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>