unpackaged/main/default/objects/Test_Cycle__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle of the cycle. Claims Paused keeps the cycle visible and in-flight work running but stops new claims. Closed cycles disappear from tester queues; nothing is deleted and reopening restores them. Rows created before this field existed have a null status and are treated as Active.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Claims Paused</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>