unpackaged/main/default/objects/Test_Cycle__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>When this cycle should be complete. Drives queue ordering for testers.</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>