unpackaged/main/default/objects/Test_Cycle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Target_Date__c</columns>
    <columns>Assigned_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>